# blaze

./: BUILD  MODULE.bazel  README.md  go.mod
.github/workflows/: test.yml
doc/: config.md
go/hello/: BUILD.bazel  golang.md  hello_test.go
scripts/: generate-builds.sh
